<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.regis.RegisActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registration"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:inputType="text"
        android:minHeight="42dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:background="@drawable/input_border"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.alcorp.storyapp.customview.EmailEditText
        android:id="@+id/edtEmailRegis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minHeight="42dp"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:inputType="text"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:background="@drawable/input_border"
        app:layout_constraintEnd_toEndOf="@+id/edtUsername"
        app:layout_constraintStart_toStartOf="@+id/edtUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <com.alcorp.storyapp.customview.PasswordEditText
        android:id="@+id/edtPassRegis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="42dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/input_border"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailRegis"
        app:layout_constraintStart_toStartOf="@+id/edtEmailRegis"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailRegis" />

    <Button
        android:id="@+id/btnRegis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:backgroundTint="@color/custom_button_color"
        app:layout_constraintEnd_toEndOf="@+id/edtPassRegis"
        app:layout_constraintStart_toStartOf="@+id/edtPassRegis"
        app:layout_constraintTop_toBottomOf="@+id/edtPassRegis" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="30dp"
        android:gravity="center"
        android:text="@string/txt_have_account"
        app:layout_constraintEnd_toEndOf="@+id/btnRegis"
        app:layout_constraintStart_toStartOf="@+id/btnRegis"
        app:layout_constraintTop_toBottomOf="@+id/btnRegis" />
</androidx.constraintlayout.widget.ConstraintLayout>